# cmake_example

./: .gitignore  CMakeLists.txt  build.sh  configure.sh  main.cpp  run.sh
